# template-python-package

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
src/mypackage/: __version__.py  mymodule.py
tests/qa/: conftest.py  test_coverage.py  test_format.py  test_lint.py  test_type_check.py
tests/src/mypackage/: test_mymodule.py  test_mypackage.py
tools/: init.sh  rename.sh
tools/qa/: format.sh  lint.sh  pylintrc.src.ini  pylintrc.tests.ini  type_check.sh
tools/qa/coverage/: report.ref  update.sh
tools/qa/coverage/html/: index.html  src_mypackage___init___py.html  src_mypackage___version___py.html  src_mypackage_mymodule_py.html  status.json
tools/qa/dictionary/: update.sh
tools/releasing/: package.sh  upload.sh  version.py
tools/tooling/container/: Dockerfile  packages.txt
tools/tooling/poetry/: poetry.toml
tools/tooling/vscode/: devcontainer
